--- a/MessengerApp/MessengerApp/Core/Localization/en.lproj/Localizable.strings
+++ b/MessengerApp/MessengerApp/Core/Localization/en.lproj/Localizable.strings
@@ -43,3 +43,10 @@
 "profile_accessibility" = "Accessibility";
 "profile_privacy" = "Privacy";
 "profile_notifications" = "Notifications";
+
+
+// Chat Screen
+
+"chat_messenger_title" = "Messenger";
+"chat_meesege_text" = "Message...";
+"chat_send_title_button" = "Send";
