show recent messages for each user and show relative timestamp

--- a/MessengerApp/MessengerApp/Core/Localization/ar.lproj/Localizable.strings
+++ b/MessengerApp/MessengerApp/Core/Localization/ar.lproj/Localizable.strings
@@ -50,3 +50,4 @@
 "chat_messenger_title" = "الدردشة";
 "chat_meesege_text" = "اكتب رسالة...";
 "chat_send_title_button" = "ارسال";
+"chat_yesterday" = "امس";
