--- a/MessengerApp/MessengerApp/Core/Localization/en.lproj/Localizable.strings
+++ b/MessengerApp/MessengerApp/Core/Localization/en.lproj/Localizable.strings
@@ -50,3 +50,4 @@
 "chat_messenger_title" = "Messenger";
 "chat_meesege_text" = "Message...";
 "chat_send_title_button" = "Send";
+"chat_yesterday" = "Yesterday";
